Add Philadelphia to list of meetups

--- a/data/meetups.yml
+++ b/data/meetups.yml
@@ -11,6 +11,8 @@
     url:      http://www.meetup.com/Ember-Atlanta-Meetup/
   - location: Orange County, CA
     url:      http://www.meetup.com/OC-EmberJS/
+  - location: Philadelphia, PA
+    url:      http://www.meetup.com/Emberjs-Philly/
 "Worldwide":
   - location: Toronto, Canada
     url:      http://www.torontoemberjs.com/
